--- a/scripts/install
+++ b/scripts/install
@@ -33,7 +33,7 @@ ynh_app_setting_set --app=$app --key=captcha_enabled --value=$captcha_enabled
 #=================================================
 ynh_script_progression --message="Installing dependencies..." --weight=15
 
-ynh_exec_warn_less curl -fsSL https://crystal-lang.org/install.sh | bash -s -- --channel=stable
+#ynh_exec_warn_less curl -fsSL https://crystal-lang.org/install.sh | bash -s -- --channel=stable
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -46,11 +46,12 @@ chown -R $app:www-data "$install_dir"
 git config --system --add safe.directory $install_dir
 
 # Download, check integrity, uncompress and patch the source from GitHub
-git clone https://github.com/iv-org/invidious "$install_dir" --quiet
+git clone https://github.com/selfhoster1312/invidious "$install_dir" --quiet
 
 pushd "$install_dir"
 	git reset --hard --quiet $version_commit
-	make
+	cc -o invidious.o -o invidious -lpcre -lrt -lm -lgc -lunwind
+	#make
 popd
 
 chmod -R o-rwx "$install_dir"
